- Fixed the inconsistencies between the documentation and the behaviour wrt the 
  different include search paths. See the Wave driver docs for details of how
  the '-I', '-I-', and '-S' options work.
- Allowed to specify more than one config file ('@' syntax) on the command line
  of the wave driver executable.
- Changed copyrights in all files to reflect the acceptance of Wave into Boost.

Tue Mar 22 14:52:45 WEST 2005
Version 1.1.15
- Fixed a bug where the complete set of C99 predefined macros were pre-defined
  when in C++ mode and variadics were enabled.
- When in variadics or C99 mode the __BASE_FILE__ predefined macro expanded to
  <Unknown>.
- Added the --listincludes option to the Wave driver executable which allows to
  log the file names of the include files opened.
- Fixed a gcc warning in token_cache.hpp (unused variable end).
- Changed the logic behind #include_next. It now starts searching with the 
  next directory after the directory the current file (the file containing the 
  #include_next directive) is located in.
- Changed the signature of the undefined_macro preprocessing hook to take the 
  token itself and not the macro name only. This is important to pass the full
  context information about the position of the #undef directive to the 
  user provided hook (thanks to Stefan Seefeld for pointing that out).
- Fixed several broken links in the Context Policy topic.
- Fixed a bug in the handling of the #include_next directive inside of 
  non-evaluated #if blocks.
- Fixed a bug in the #include_next handling code (thanks to Stefan Seefeld).
- Changed the signature of the opened_include_file() preprocessing hook which 
  now receives not only the absolute file name of the openend include file but
  additionally gets passed the (possibly) relative path of the openend include
  file. This concrete format of the relative path depends on the format of the
  include search directory given to the library.